--- a/src/pages/trusted-profile/components/trusted-profile.component.html
+++ b/src/pages/trusted-profile/components/trusted-profile.component.html
@@ -16,12 +16,12 @@
 
     <div class="trusted-body">
       <div class="trusted-body_buttons">
-        <button class="trusted-body_buttons--video" routerLink="/trusted-profile/video" routerLinkActive="active" [text]="{
+        <button class="trusted-body_buttons--video" routerLink="/trusted-profile/video" routerLinkActive="active" [orgText]="{
           ENG: 'Video',
           ESP: 'Video',
           RUS: 'Видео',
         }">Video</button>
-        <button routerLink="/trusted-profile/audio" routerLinkActive="active" [text]="{
+        <button routerLink="/trusted-profile/audio" routerLinkActive="active" [orgText]="{
           ENG: 'Audio',
           ESP: 'Audio',
           RUS: 'Аудио',
