--- a/src/widgets/notification-settings/components/notification-settings.component.html
+++ b/src/widgets/notification-settings/components/notification-settings.component.html
@@ -1,12 +1,12 @@
 <div class="notifications">
-  <div class="notifications-title" [text]="{
+  <div class="notifications-title" [orgText]="{
     ENG: 'Setting up alerts in other ways',
     ESP: 'Configurar alertas de otras formas',
     RUS: 'Настройка оповещений другими способами',
   }">Setting up alerts in other ways</div>
 
   <div class="notifications-email">
-    <div class="notifications-email_text"[text]="{
+    <div class="notifications-email_text"[orgText]="{
       ENG: 'Add email:',
       ESP: 'Agregar correo:',
       RUS: 'Добавить email:',
