--- a/src/widgets/saved-media/components/saved-media.component.html
+++ b/src/widgets/saved-media/components/saved-media.component.html
@@ -1,12 +1,12 @@
 <div class="saved container">
 
   <div class="saved-buttons">
-    <button class="saved-buttons_video" routerLink="/profile/saved-media/video" routerLinkActive="active" [text]="{
+    <button class="saved-buttons_video" routerLink="/profile/saved-media/video" routerLinkActive="active" [orgText]="{
       ENG: 'Video',
       ESP: 'Video',
       RUS: 'Видео',
     }">Video</button>
-    <button routerLink="/profile/saved-media/audio" routerLinkActive="active" [text]="{
+    <button routerLink="/profile/saved-media/audio" routerLinkActive="active" [orgText]="{
       ENG: 'Audio',
       ESP: 'Audio',
       RUS: 'Аудио',
