--- a/src/features/video/components/video.component.html
+++ b/src/features/video/components/video.component.html
@@ -6,7 +6,7 @@
 
   <div class="video-text">
     <div class="video-text_data">
-      <span [text]="{
+      <span [orgText]="{
         ENG: 'Date of download: ',
         ESP: 'Date of download: ',
         RUS: 'Дата загрузки: ',
@@ -14,14 +14,14 @@
       <p>25.12.2026</p>
     </div>
     <div class="video-text_duration">
-      <span [text]="{
+      <span [orgText]="{
         ENG: 'Duration: ',
         ESP: 'Duration: ',
         RUS: 'Продолжительность: ',
       }">Duration: </span>
       <p>1m. 27s.</p>
     </div>
-    <button class="video-text_download btn-primary" [text]="{
+    <button class="video-text_download btn-primary" [orgText]="{
       ENG: 'Download',
       ESP: 'Download',
       RUS: 'Загрузить',
