--- a/src/pages/authorization/components/authorization.component.html
+++ b/src/pages/authorization/components/authorization.component.html
@@ -2,7 +2,7 @@
 
 <div class="wrapper">
   <div class="container">
-    <h2 [text]="{
+    <h2 [orgText]="{
       ENG: 'Authorization',
       ESP: 'Authorization',
       RUS: 'Авторизация',
@@ -10,12 +10,12 @@
 
     <form [formGroup]="authForm" (ngSubmit)="onSubmit()" (keyup.enter)="onSubmit()">
       <div class="form-group">
-        <label for="login" [text]="{
+        <label for="login" [orgText]="{
           ENG: 'Username or email',
           ESP: 'Ddfsrd ',
           RUS: 'Логин или email',
         }">Username or email</label>
-        <input type="text" id="login" formControlName="login"
+        <input type="text" id="login" formControlName="login" autocomplete="current-login"
           [class.validation-error]="isValidControl('login')">
           @if (isValidControl('login')) {
             <p class="error-message">{{getErrorMessage('login')}}</p>
@@ -23,18 +23,18 @@
       </div>
 
       <div class="form-group">
-        <label for="password" [text]="{
+        <label for="password" [orgText]="{
           ENG: 'Password',
           ESP: 'Pass',
           RUS: 'Пароль',
         }">Password</label>
-        <input #password type="password" id="password" formControlName="password"
+        <input #password type="password" id="password" formControlName="password" autocomplete="current-password"
           [class.validation-error]="isValidControl('password')">
           @if (isValidControl('password')) {
             <p class="error-message">{{getErrorMessage('password')}}</p>
           }
       </div>
-      <button type="submit" class="btn-primary" [text]="{
+      <button type="submit" class="btn-primary" [orgText]="{
         ENG: 'Log in',
         ESP: 'Pass',
         RUS: 'Войти',
