--- a/src/pages/profile/components/profile.component.html
+++ b/src/pages/profile/components/profile.component.html
@@ -32,7 +32,7 @@
           </abbr>
         </button>
 
-        <button class="profile-header_buttons--record btn-primary" routerLink="/capture" [text]="{
+        <button class="profile-header_buttons--record btn-primary" routerLink="/capture" [orgText]="{
           ENG: 'Make an entry',
           ESP: 'Hacer una entrada',
           RUS: 'Сделать запись',
@@ -43,17 +43,17 @@
     <div class="profile-body">
       <div class="profile-body_menu" (click)="onMenuClick()" [class.--openMenu]="isMenuOpen">
         <div class="profile-body_menu--arrow"></div>
-        <button routerLink="/profile/saved-media" routerLinkActive="active" [text]="{
+        <button routerLink="/profile/saved-media" routerLinkActive="active" [orgText]="{
           ENG: 'Saved media',
           ESP: 'Medios guardados',
           RUS: 'Сохранённые медиа',
         }">Saved media</button>
-        <button routerLink="/profile/trusted-people" routerLinkActive="active" [text]="{
+        <button routerLink="/profile/trusted-people" routerLinkActive="active" [orgText]="{
           ENG: 'Trusted people',
           ESP: 'Gente de confianza',
           RUS: 'Доверенные люди',
         }">Trusted people</button>
-        <button routerLink="/profile/notification-settings" routerLinkActive="active" [text]="{
+        <button routerLink="/profile/notification-settings" routerLinkActive="active" [orgText]="{
           ENG: 'Notification settings',
           ESP: 'Configuración de alerta',
           RUS: 'Настройки оповещений',
