--- a/src/pages/registration/components/registration.component.html
+++ b/src/pages/registration/components/registration.component.html
@@ -2,7 +2,7 @@
 
 <div class="wrapper">
   <div class="container">
-    <h2 [text]="{
+    <h2 [orgText]="{
       ENG: 'Registration',
       ESP: 'Ddfsrdы',
       RUS: 'Регистрация',
@@ -10,12 +10,12 @@
 
     <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" (keyup.enter)="onSubmit()">
       <div class="form-group">
-        <label for="name" [text]="{
+        <label for="name" [orgText]="{
           ENG: 'Username:',
           ESP: 'Ddfsrd:',
           RUS: 'Логин:',
         }">Username:</label>
-        <input type="text" id="name" formControlName="name"
+        <input type="text" id="name" formControlName="name" autocomplete="current-name"
           [class.validation-error]="isValidControl('name')">
           @if (isValidControl('name')) {
             <p class="error-message">{{getErrorMessage('name')}}</p>
@@ -32,12 +32,12 @@
       </div>
 
       <div class="form-group">
-        <label for="password" [text]="{
+        <label for="password" [orgText]="{
           ENG: 'Password (min: 6):',
           ESP: ' (min: 6):',
           RUS: 'Пароль (минимум: 6):',
         }">Password (min: 6):</label>
-        <input type="password" id="password" formControlName="password"
+        <input type="password" id="password" formControlName="password" autocomplete="current-password"
           [class.validation-error]="isValidControl('password')">
           @if (isValidControl('password')) {
             <p class="error-message">{{getErrorMessage('password')}}</p>
@@ -46,7 +46,7 @@
 
       <div class="form-check">
         <input type="checkbox" id="agreement" formControlName="agreement">
-        <label class="form-check-label" for="agreement" [text]="{
+        <label class="form-check-label" for="agreement" [orgText]="{
           ENG: 'I agree to the terms and conditions',
           ESP: '',
           RUS: 'Согласен с условиями договора',
@@ -54,7 +54,7 @@
         <button>terms and conditions</button>
         </label>
         @if (isValidControl('agreement')) {
-          <p class="error-message" [text]="{
+          <p class="error-message" [orgText]="{
               ENG: 'Agreement is required.',
               ESP: '',
               RUS: 'Соглашение обязательно',
@@ -62,7 +62,7 @@
         }
       </div>
       <button type="submit" class="btn btn-primary"
-        [text]="{
+        [orgText]="{
           ENG: 'Register',
           ESP: '',
           RUS: 'Регистрация',
